src/test/ui/const-generics/defaults/complex-generic-default-expr.full.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/complex-generic-default-expr.rs:9:62
   |
LL | struct Bar<T, const TYPE_SIZE: usize = { std::mem::size_of::<T>() }>(T);
   |            -                                                 ^ doesn't have a size known at compile-time
   |            |
   |            this type parameter needs to be `std::marker::Sized`
   | 
  ::: $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub const fn size_of<T>() -> usize {
   |                      - required by this bound in `std::mem::size_of`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
